snapshots/care/data4life/hc-util-sdk-kmp/error/1.13.0-SNAPSHOT/error-1.13.0-20220817.130540-1-sources.jar.sha512
567dd5387bdac232caab195daae4930ba04e7cb4d520ce22c4d839ab59b117c4788b9962f2ad661aebe75008a23f8519da33e832c8e9f43037ee9f598333ce62